2012-05-29  Asterisk Development Team <asteriskteam@digium.com>

	* Certified Asterisk 1.8.11-cert2 Released.

	* AST-2012-007

	* AST-2012-008

2012-04-25  Asterisk Development Team <asteriskteam@digium.com>

	* Certified Asterisk 1.8.11-cert1 Released.

2012-04-25 16:53 +0000 [r363674]  Jason Parker <jparker@digium.com>

	* / (added): Asterisk 1.8-digiumphones branch has become Certified
	  Asterisk 1.8.11. For more details about Certified Asterisk, see
	  http://tinyurl.com/7pfp639

2012-04-24 20:57 +0000 [r363374]  Jason Parker <jparker@digium.com>

	* /res/res_smdi.c,
	  /apps/app_osplookup.c,
	  /channels/chan_misdn.c,
	  /channels/chan_skinny.c,
	  /funcs/func_frame_trace.c,
	  /cdr/cdr_sqlite.c,
	  /pbx/pbx_realtime.c,
	  /apps/app_amd.c,
	  /pbx/pbx_dundi.c,
	  /apps/app_url.c,
	  /channels/chan_nbs.c,
	  /apps/app_externalivr.c,
	  /apps/app_zapateller.c,
	  /cdr/cdr_odbc.c,
	  /res/res_fax_spandsp.c,
	  /channels/chan_mgcp.c,
	  /cel/cel_pgsql.c,
	  /apps/app_readfile.c,
	  /apps/app_test.c,
	  /apps/app_ices.c,
	  /channels/chan_gtalk.c,
	  /cdr/cdr_csv.c,
	  /channels/chan_phone.c,
	  /funcs/func_pitchshift.c,
	  /apps/app_waitforring.c,
	  /formats/format_vox.c,
	  /res/res_timing_pthread.c,
	  /apps/app_minivm.c,
	  /channels/chan_h323.c,
	  /cel/cel_sqlite3_custom.c,
	  /apps/app_confbridge.c,
	  /res/res_config_ldap.c,
	  /apps/app_nbscat.c,
	  /cdr/cdr_sqlite3_custom.c,
	  /res/res_snmp.c,
	  /apps/app_dictate.c,
	  /apps/app_waitforsilence.c,
	  /apps/app_dahdiras.c,
	  /pbx/pbx_lua.c,
	  /apps/app_alarmreceiver.c,
	  /apps/app_image.c,
	  /res/res_ael_share.c,
	  /cdr/cdr_tds.c,
	  /apps/app_setcallerid.c,
	  /apps/app_mp3.c,
	  /channels/chan_alsa.c,
	  /res/res_timing_kqueue.c,
	  /channels/chan_unistim.c,
	  /apps/app_dahdibarge.c,
	  /res/res_config_pgsql.c,
	  /res/res_adsi.c,
	  /res/res_phoneprov.c,
	  /apps/app_morsecode.c,
	  /cdr/cdr_pgsql.c,
	  /res/res_config_sqlite.c,
	  /channels/chan_jingle.c,
	  /pbx/pbx_ael.c,