@@ -1,3 +1,11 @@
+2012-07-05  Asterisk Development Team <asteriskteam@digium.com>
+
+	* Certified Asterisk 1.8.11-cert4 Released.
+
+	* AST-2012-010
+
+	* AST-2012-011
+
 2012-05-29  Asterisk Development Team <asteriskteam@digium.com>
 
 	* Certified Asterisk 1.8.11-cert2 Released.
